Correcao sonarlint